# python-kafka

./: .env  .env.dc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  READMEERROR.md  command.md  compose.yaml  confluent-compose-3b.yaml  confluent-compose.yaml  dc-all-in-one.yaml  generate_grpc.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 29f6c14a0b23_create_student_table.py
client/: grpc_client.py
consumer/: c_config.py  config.py  consumer_service.py  db.py  dlt_service.md  env_vars.py  main.py  models.py  retry_service.py  utils.py
consumer/test/: test_consumer_service.py
producer/: config.py  dead_letter_schema.avsc  env_vars.py  main.py  models.py  p_config.py  producer_callback.py  producer_route.py  producer_service.py  server.py  student_service.py  topic_service.py  utils.py
producer/grpc/: grpc_server.py  student_pb2.py  student_pb2_grpc.py
proto/: student.proto
schemas/: dead_letter_schema.avsc  student_schema.avsc
scripts/: create-topics.sh
src/: api.py  config.py  consumer_services.py  consumers.py  main.py  models.py  producer_services.py  schema_validator.py  server.py  utils.py
src/consumer/: consumer_service.py  dlt_consumer.py  main.py  retry_service.py
src/producer/: producer_callback.py  producer_route.py  producer_service.py  student_service.py  topic_service.py
